--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-plugin-hiprint": "^0.0.56"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
