--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@hufe921/canvas-editor": "^0.9.61",
     "element-ui": "^2.15.14",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
