--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "print-js": "^1.6.0",
     "vue": "^2.6.14",
     "vue-plugin-hiprint": "^0.0.56"
