--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lodash": "^4.17.21",
     "print-js": "^1.6.0",
     "vue": "^2.6.14",
-    "vue-plugin-hiprint": "^0.0.56"
+    "vue-plugin-hiprint": "^0.0.56",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
