--- a/package.json
+++ b/package.json
@@ -8,12 +8,32 @@
   },
   "dependencies": {
     "@hufe921/canvas-editor": "^0.9.61",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "docx": "^8.5.0",
+    "docxtemplater": "^3.44.0",
     "element-ui": "^2.15.14",
+    "encoding": "^0.1.13",
+    "file-saver": "^2.0.5",
+    "html-to-docx": "^1.8.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
+    "https-browserify": "^1.0.0",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "officegen": "^0.6.5",
+    "path-browserify": "^1.0.1",
+    "pizzip": "^3.1.6",
     "print-js": "^1.6.0",
+    "process": "^0.11.10",
+    "readable-stream": "^4.5.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "vue": "^2.6.14",
     "vue-plugin-hiprint": "^0.0.56",
     "vuex": "^3.6.2",
