--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "docx": "^8.5.0",
+    "docx-preview": "^0.3.0",
     "docxtemplater": "^3.44.0",
     "element-ui": "^2.15.14",
     "encoding": "^0.1.13",
