--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "util": "^0.12.5",
     "vue": "^2.6.14",
     "vue-plugin-hiprint": "^0.0.56",
+    "vue-zoomer": "^0.3.10",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
